--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 clocal.m4
 autom4te.cache
-#config.h*
+config.h*
 config.h.in
 config.log
 config.status
@@ -40,5 +40,5 @@ gstreamer*.tar*
 *.rej
 tools/listcomponents
 /m4
-#Makefile.in
+Makefile.in
 #Makefile
